@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="cz.romario.opensudoku"
-      android:versionName="1.1.2" 
-      android:versionCode="1102"
-      android:installLocation="preferExternal"
-      >
+      android:versionCode="1103" android:installLocation="auto" android:versionName="1.1.3">
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
     <application android:icon="@drawable/opensudoku" android:label="@string/app_name">
         <activity android:name=".gui.FolderListActivity"
